--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
           <div class="links">
             <ul>
               <li>
-                <a href="">home</a>
+                <a href="#">home</a>
               </li>
               <li>
-                <a href="">blog</a>
+                <a href="#">blog</a>
               </li>
               <li>
-                <a href="">about</a>
+                <a href="#about">about</a>
               </li>
               <li>
-                <a href="">plans</a>
+                <a href="#plans">plans</a>
               </li>
               <li>
-                <a href="">contact</a>
+                <a href="#contact">contact</a>
               </li>
             </ul>
           </div>
@@ -68,7 +68,7 @@
             </div>
           </div>
         </div>
-        <div class="second">
+        <div id="about" class="second">
           <div class="image"></div>
           <div class="text">
             <h1>Hello Im <span>Maria</span></h1>
@@ -90,7 +90,7 @@
             </p>
           </div>
         </div>
-        <div class="third">
+        <div id="plans" class="third">
           <h1>
             Maximize Your Learning Potential with High-Quality English Lessons
           </h1>
@@ -172,12 +172,16 @@
           </div>
         </div>
       </div>
-      <footer>
+      <footer id="contact">
         <h1>Get in touch</h1>
         <div class="contacts">
           <a href="tel:+79288447781"><i class="fa-brands fa-whatsapp"></i></a>
-          <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-          <a href=""><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.facebook.com/maria.nazarova.355"
+            ><i class="fa-brands fa-square-facebook"></i
+          ></a>
+          <a href="https://www.instagram.com/samarskaya_maria_english"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
           <a href="mailto: abc@example.com"
             ><i class="fa-regular fa-envelope"></i
           ></a>
